fix spotify overlapping element

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -782,6 +782,7 @@ h2 {
     padding: 0;
   }
   .spotify-player div {
+    left: 0;
     top: -82px;
   }
   .spotify-player iframe {
