--- a/src/assets/styles/Tablet.scss
+++ b/src/assets/styles/Tablet.scss
@@ -126,7 +126,7 @@
   .spotify-player {
     padding: 0;
     div {
-      
+      left:0;
       top: -82px;
     }
     iframe {
